added functionality to emoji

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="emoji closed active">
-
+        🙈
+    </div> 
+    <div class="emoji open">
+        🙉
     </div> 
 
 
